kernel/tests/typing/invalid/not_a_function_2.ck
data T : Type where

def a (x : T) : T := x x